--- a/LayeroneWEB/src/main/webapp/index.xhtml
+++ b/LayeroneWEB/src/main/webapp/index.xhtml
@@ -1,10 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <html xmlns="http://www.w3.org/1999/xhtml"
-    xmlns:f="http://java.sun.com/jsf/core"
-    xmlns:h="http://java.sun.com/jsf/html"
-    xmlns:c="http://xmlns.jcp.org/jsp/jstl/core"
-    xmlns:ui="http://java.sun.com/jsf/facelets">
+      xmlns:f="http://java.sun.com/jsf/core"
+      xmlns:h="http://java.sun.com/jsf/html"
+      xmlns:c="http://xmlns.jcp.org/jsp/jstl/core"
+      xmlns:ui="http://java.sun.com/jsf/facelets"
+      xmlns:p="http://primefaces.org/ui">
 
-    <h1>Hello Faces World!</h1>
+    <ui:component>
+        <h:form>
+            <p:messages autoUpdate="true"/>
+
+            <p:commandButton actionListener="#{homeBean.showMessage()}"  value="Show" update="@form"/>        
+        </h:form>
+    </ui:component>
+
 
 </html>
