--- a/LayeroneWEB/src/main/webapp/faces/home/index.xhtml
+++ b/LayeroneWEB/src/main/webapp/faces/home/index.xhtml
@@ -4,13 +4,13 @@
       xmlns:h="http://java.sun.com/jsf/html"
       xmlns:c="http://xmlns.jcp.org/jsp/jstl/core"
       xmlns:ui="http://java.sun.com/jsf/facelets"
-      xmlns:p="http://primefaces.org/ui">
+      xmlns:b="http://bootsfaces.net/ui">
 
     <ui:component>
         <h:form>
-            <p:messages autoUpdate="true"/>
+            <b:messages autoUpdate="true"/>
 
-            <p:commandButton actionListener="#{homeBean.showMessage()}"  value="Show" update="@form"/>        
+            <b:commandButton actionListener="#{homeBean.showMessage()}"  value="Show" update="@form"/>        
         </h:form>
     </ui:component>
 
